k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
  namespace: saas-app
spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend-ui

  template:
    metadata:
      labels:
        app: frontend-ui

    spec:
      containers:
        - name: frontend-ui
          image: camoudock/multy-tenancy-frontend-ui:ede363e2065fad7d6259a59c8de8cb93583554fa
          imagePullPolicy: Never

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
