k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ui
  namespace: saas-app
spec:
  selector:
    app: frontend-ui

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
